# rover_px4_ros2_jumpstart

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml  docker-compose2.yaml  flash.sh  setup.sh
colcon_ws/: acc_cmd.npy  acc_ned.npy  disturbance.npy
colcon_ws/circular_trajectory_slow/: circular_trajectory_slow_0.db3  metadata.yaml
colcon_ws/circular_trajectory_slow_with_disturbance/: circular_trajectory_slow_with_disturbance_0.db3  metadata.yaml
colcon_ws/my_bag1/: metadata.yaml
colcon_ws/rosbag2_2024_04_11-00_28_18/: metadata.yaml  rosbag2_2024_04_11-00_28_18_0.db3
colcon_ws/src/all_launch/config/: config_vicon.yaml  (+1 more)
colcon_ws/src/foresee_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/trajectory_driver/: package.xml  setup.cfg  setup.py
colcon_ws/src/trajectory_driver/launch/: .figure8.launch.py.swp  .trajectory.launch.py.swp  circle_simple.launch.py  circle_smooth.launch copy.py  figure8.launch.py  trajectory.launch.py
colcon_ws/src/trajectory_driver/trajectory_driver/: .data_node.py.swp  circle_simple.py  circle_smooth.py  data_node.py  figureeight.py  figureeight_smooth.py  hover.py  message_node.py
colcon_ws/src/trajectory_driver/trajectory_driver/cir_traj_r0.3_w1.5_c00_h0.4_fanhigh/: cir_traj_r0.3_w1.5_c00_h0.4_fanhigh_0.db3  metadata.yaml
colcon_ws/src/trajectory_driver/trajectory_driver/cir_traj_r0.3_w1_c00_h0.4_fanhigh/: cir_traj_r0.3_w1_c00_h0.4_fanhigh_0.db3  metadata.yaml
colcon_ws/src/trajectory_driver/trajectory_driver/eight_traj_r0.4_w1_c00_h0.4_fanhigh/: eight_traj_r0.4_w1_c00_h0.4_fanhigh_0.db3  metadata.yaml
(+1 files in other folders)
