<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="albfang@umich.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>rclpy</exec_depend>

  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>foresee_msgs</depend>
  <depend>geometry_msgs</depend>

 <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
